-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 25, 26
-
Component/s: hotspot
-
b05
This test case was executed with -XX:-UseCompressedOops
# SIGSEGV (0xb) at pc=0x00000001083be878, pid=33490, tid=12819
#
# JRE version: (27.0+3) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 27-ea+3-172, mixed mode, sharing, tiered, compressed class ptrs, epsilon gc, bsd-aarch64)
# Problematic frame:
# V [libjvm.dylib+0xe1e878] MemoryPool::record_peak_memory_usage()+0x1c
Stack: [0x000000016f2a0000,0x000000016f4a3000], sp=0x000000016f4a2850, free space=2058k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0xe1e878] MemoryPool::record_peak_memory_usage()+0x1c
V [libjvm.dylib+0xe21afc] MemoryService::track_memory_usage()+0x30
V [libjvm.dylib+0x6b2b70] EpsilonMonitoringSupport::update_counters()+0x18
V [libjvm.dylib+0x6b0678] EpsilonHeap::allocate_work(unsigned long, bool)+0x248
V [libjvm.dylib+0x6b0e78] EpsilonHeap::allocate_new_tlab(unsigned long, unsigned long, unsigned long*)+0x2cc
V [libjvm.dylib+0xdf36ac] MemAllocator::mem_allocate_inside_tlab_slow(MemAllocator::Allocation&) const+0x210
V [libjvm.dylib+0xdf3aa4] MemAllocator::mem_allocate(MemAllocator::Allocation&) const+0xcc
V [libjvm.dylib+0xdf3b8c] MemAllocator::allocate() const+0x64
V [libjvm.dylib+0x26f53c] AOTStreamedHeapLoader::allocate_object(oopDesc*, markWord, unsigned long, JavaThread*)+0x15c
V [libjvm.dylib+0x272814] AOTStreamedHeapLoader::IterativeObjectLoader::materialize_range(int, int, JavaThread*)+0x4fc
V [libjvm.dylib+0x272dd8] AOTStreamedHeapLoader::IterativeObjectLoader::materialize_next_batch(JavaThread*)+0x110
V [libjvm.dylib+0x273048] AOTStreamedHeapLoader::materialize_early(JavaThread*)+0xe8
V [libjvm.dylib+0x2735f0] AOTStreamedHeapLoader::materialize_objects()+0x84
V [libjvm.dylib+0x297b18] AOTThread::aot_thread_entry(JavaThread*, JavaThread*)+0xc
V [libjvm.dylib+0x94f8e8] JavaThread::thread_main_inner()+0x1f8
V [libjvm.dylib+0x11b6ea4] Thread::call_run()+0xf0
V [libjvm.dylib+0xf07bc8] thread_native_entry(Thread*)+0x138
C [libsystem_pthread.dylib+0x6c08] _pthread_start+0x88
siginfo: si_signo: 11 (SIGSEGV), si_code: 2 (SEGV_ACCERR), si_addr: 0x0000000000000000
# SIGSEGV (0xb) at pc=0x00000001083be878, pid=33490, tid=12819
#
# JRE version: (27.0+3) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 27-ea+3-172, mixed mode, sharing, tiered, compressed class ptrs, epsilon gc, bsd-aarch64)
# Problematic frame:
# V [libjvm.dylib+0xe1e878] MemoryPool::record_peak_memory_usage()+0x1c
Stack: [0x000000016f2a0000,0x000000016f4a3000], sp=0x000000016f4a2850, free space=2058k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0xe1e878] MemoryPool::record_peak_memory_usage()+0x1c
V [libjvm.dylib+0xe21afc] MemoryService::track_memory_usage()+0x30
V [libjvm.dylib+0x6b2b70] EpsilonMonitoringSupport::update_counters()+0x18
V [libjvm.dylib+0x6b0678] EpsilonHeap::allocate_work(unsigned long, bool)+0x248
V [libjvm.dylib+0x6b0e78] EpsilonHeap::allocate_new_tlab(unsigned long, unsigned long, unsigned long*)+0x2cc
V [libjvm.dylib+0xdf36ac] MemAllocator::mem_allocate_inside_tlab_slow(MemAllocator::Allocation&) const+0x210
V [libjvm.dylib+0xdf3aa4] MemAllocator::mem_allocate(MemAllocator::Allocation&) const+0xcc
V [libjvm.dylib+0xdf3b8c] MemAllocator::allocate() const+0x64
V [libjvm.dylib+0x26f53c] AOTStreamedHeapLoader::allocate_object(oopDesc*, markWord, unsigned long, JavaThread*)+0x15c
V [libjvm.dylib+0x272814] AOTStreamedHeapLoader::IterativeObjectLoader::materialize_range(int, int, JavaThread*)+0x4fc
V [libjvm.dylib+0x272dd8] AOTStreamedHeapLoader::IterativeObjectLoader::materialize_next_batch(JavaThread*)+0x110
V [libjvm.dylib+0x273048] AOTStreamedHeapLoader::materialize_early(JavaThread*)+0xe8
V [libjvm.dylib+0x2735f0] AOTStreamedHeapLoader::materialize_objects()+0x84
V [libjvm.dylib+0x297b18] AOTThread::aot_thread_entry(JavaThread*, JavaThread*)+0xc
V [libjvm.dylib+0x94f8e8] JavaThread::thread_main_inner()+0x1f8
V [libjvm.dylib+0x11b6ea4] Thread::call_run()+0xf0
V [libjvm.dylib+0xf07bc8] thread_native_entry(Thread*)+0x138
C [libsystem_pthread.dylib+0x6c08] _pthread_start+0x88
siginfo: si_signo: 11 (SIGSEGV), si_code: 2 (SEGV_ACCERR), si_addr: 0x0000000000000000
- causes
-
JDK-8375359 Improve GC serviceability init staging
-
- Resolved
-
- relates to
-
JDK-8365268 SIGSEGV in InstanceKlass::initialize with EpsilonGC
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk/47e19353
-
Review(master)
openjdk/jdk/29061