8373941: Epsilon: Robust counter updates in early VM phases

Reviewed-by: stefank, tschatzl